[package]
name = "twitter_comic_streamer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
envy = "0.4.2" 
egg-mode = "0.16.0"
futures = "0.3.16"
serde = "1.0.127"
serde_json = "1.0.66" 
chrono = "0.4.19"
rocket = "0.5.0-rc.1"
reqwest = "0.11.4" 
image = "0.23.14"
state = "0.5.2"
rand = "0.8.4" 
